See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.11.00

              pamdice: fix using more digits than necessary in output file
              names -- width was based on one more slice than was actually
              generated.  Broken since Netpbm 10.29 (August 2005).

              pnmquantall: fix arbitrary shell command execution with input
              file names or color count that contain shell metacharacters.
              Always present ('pnmquantall' has existed, aka 'ppmquantall',
              since primordial Netpbm).

              ppmtogif: fix arbitrary shell commands when arguments contain
              shell metacharacters.  Broken in Netpbm 10.37 (June 2006).

              pnmtofiasco: fix crash when image is really small.  Always
              broken (program was new in Netpbm 9.6, July 2000).
              
              pnmtofiasco: fix bug: uses one tile regardless of
              --tiling-exponent.  Always broken (programs were new in Netpbm
              9.6, July 2000).

              pnmtofiasco: fix bug: infinite loop with multiple tiles.
              Always broken (program was new in Netpbm 96., July 2000),
              but made functional by bug fix in 11.10 (March 2025).

              pnmtofiasco: fix bug: does wrong level of optimization

              Introduced in Netpbm 11.05 (December 2023).

25.03.28 BJH  Release 11.10.00

              pamdice: Add -listfile, -indexfile, -numberwidth, -dry-run .

              pamundice: Add -indexfile .

              pamflip: improve efficiency - less copying of tuples in basic
              whole-image non-PBM case.

              pamflip: more direct error message for -memsize=0.

              pamflip: warn if redundant -pagesize specified with -verbose.

              pcdovtoppm: improve syntax error messages.

              pammixmulti: Fix crash from uninitialized memory.  Introduced in